--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
 <div style="color:white; text-align:center">
-<img src="images/weather-logo.png" style=" height: auto;width: auto;filter: drop-shadow(10px 10px 10px black);">
+<img src="images/CtmQlogo.gif" style=" height: auto;width: auto;filter: drop-shadow(5px 5px 5px rgb(128, 0, 255));">
     <h1>Welcome to the Weather Web App</h1>
     
  
     <h2>Technologies Used: </h2> <p>HTML, CSS, JS, Java, Servlet, JSP, OpenWeather API</p>
      <form action="MyServlet" method="post" class="searchInput">
-            <input type="text" placeholder="Enter City Name" id="searchInput" value="New Delhi" name="city"/>
+            <input type="text" placeholder="Enter City Name" id="searchInput" value="Enter City Name" name="city"/>
             <button id="searchButton"><i class="fa-solid fa-magnifying-glass"></i></button>
       </form>    
  </div>
