--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,7 @@
  
     <h2>Technologies Used: </h2> <p>HTML, CSS, JS, Java, Servlet, JSP, OpenWeather API</p>
      <form action="MyServlet" method="post" class="searchInput">
-            <input type="text" placeholder="Enter City Name" id="searchInput" value="Enter City Name" name="city"/>
+            <input type="text" placeholder="Enter City Name" id="searchInput" value="" name="city"/>
             <button id="searchButton"><i class="fa-solid fa-magnifying-glass"></i></button>
       </form>    
  </div>
