shadow added to text
shadow added to text of opening page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
- <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyWeatherApp</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
-
 </head>
 <body>
 <div style="color:white; text-align:center">
-<img src="images/CtmQlogo.gif" style=" height: auto;width: auto;filter: drop-shadow(5px 5px 5px rgb(128, 0, 255));">
-    <h1>Welcome to the Weather Web App</h1>
+    <img src="images/CtmQlogo.gif" style="height: auto;width: auto;filter: drop-shadow(5px 5px 5px rgb(128, 0, 255));">
+    <h1 style="text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);">Welcome to the Weather Web App</h1>
     
- 
-    <h2>Technologies Used: </h2> <p>HTML, CSS, JS, Java, Servlet, JSP, OpenWeather API</p>
-     <form action="MyServlet" method="post" class="searchInput">
-            <input type="text" placeholder="Enter City Name" id="searchInput" value="" name="city"/>
-            <button id="searchButton"><i class="fa-solid fa-magnifying-glass"></i></button>
-      </form>    
- </div>
- 
+    <h2 style="text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);">Technologies Used: </h2>
+    <p style="text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);">HTML, CSS, JS, Java, Servlet, JSP, OpenWeather API</p>
+
+    <form action="MyServlet" method="post" class="searchInput">
+        <input type="text" placeholder="Enter City Name" id="searchInput" value="" name="city"/>
+        <button id="searchButton"><i class="fa-solid fa-magnifying-glass"></i></button>
+    </form>    
+</div>
 </body>
 </html>
-
